# StockBot

./: .gitignore  backtest.py  backtest_hybrid_pnl.py  build_metrics.py  catalyst_calendar.json  catalyst_calendar.py  discord_bot.py  get_macro.py  get_spy.py  get_top_signals.py  model_weights.json  prompt_summary  pyproject.toml  rank_candidates.py  rank_hybrid_intraday.py  requirements.txt  run_ranker.py  stockbot.service  train_ml_weights.py
backtest_results/: equity_2025-02-01_to_2025-08-31.csv  equity_sniper_2025-02-01_to_2025-08-31.csv  equity_sniper_2025-09-01_to_2025-09-30.csv  sweep_hybrid.csv  sweep_hybrid_sniper.csv
bot/: commands.py  discord_client.py  main.py  scanner.py
calculators/: atr.py  gap.py  momentum.py  opening_metrics.py  orb.py  premarket_metrics.py  rsi.py  technicals.py  volume.py  volume_metrics.py  vwap.py
data/: store.py
fetchers/: alpaca_client.py  catalyst_calendar.json  catalyst_client.py  finnhub_client.py  yahoo_client.py
filters/: intraday_filter.py  premarket_filter.py
ranker/: __init__.py  config.py  embedder.py  news_fetcher.py  pipeline.py  premarket.py  premarket_movement.py  scorer.py
scripts/: analyze_and_select.py  augment_csv_with_news.py  augment_csv_with_yf.py  build_finnhub_premarket_csv.py  evaluate_selection.py  premarket_movement.py  run_daily_pipeline.py  save_universes.py  tsv_viewer.html
scripts2/: build_premarket_metrics.py  fetch_opening_metrics.py
stock_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
strategy/: position_manager.py  signal_generator.py  technical_signals.py
(+11 files in other folders)
